Import of JPRIT/ObjStore-Lib-PDL-0.92 from CPAN.
gitpan-cpan-distribution: ObjStore-Lib-PDL
gitpan-cpan-version:      0.92
gitpan-cpan-path:         JPRIT/ObjStore-Lib-PDL-0.92.tar.gz
gitpan-cpan-author:       JPRIT
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-01-12  Joshua Pritikin  <joshua.pritikin@db.com>
+
+	* Release 0.92.
+
+1998-11-06  Joshua Pritikin  <joshua.pritikin@db.com>
+
+	* Avoid leaving a trail of corrupted SVs.  Added tests.
+
 1998-10-30  Joshua Pritikin  <joshua.pritikin@db.com>
 
 	* Split into two classes PDL & cursor for easy C++ manipulation.
